syntax = "proto3";

// NIPs complete: 01 - 10
// skipped 11
// TODO: 12 onward

/************************************************
 * EVENT message-type
 * NIP-01
 */

message EventTag {                  // NIP-01
    bytes id = 1;                   // NIP-01
    string relayUrl = 2;            // NIP-01
    string marker = 3;              // NIP-10
}

message PubkeyTag {                 // NIP-01
    bytes key = 1;                  // NIP-01
    string relayUrl = 2;            // NIP-01
    string petname = 3;             // NIP-02
}

message Tags {                      // NIP-01
    repeated EventTag etags = 1;    // NIP-01
    repeated PubkeyTag ptags = 2;   // NIP-01
}

message Event {                     // NIP-01
    bytes id = 1;                   // NIP-01
    bytes pubkey = 2;               // NIP-01
    sfixed64 created_at = 3;        // NIP-01
    int64 kind = 4;                 // NIP-01
    repeated Tags tags = 5;         // NIP-01
    string content = 6;             // NIP-01, NIP-04
    bytes sig = 7;                  // NIP-01
    bytes ots = 8;                  // NIP-03
}

/************************************************
 * REQ message-type
 * NIP-01
 */
message Filter {
    repeated bytes ids = 1;         // NIP-01
    repeated bytes authors = 2;     // NIP-01
    repeated int64 kinds = 3;       // NIP-01
    repeated EventTag es = 4;       // NIP-01
    repeated PubkeyTag ps = 5;      // NIP-01
    sfixed64 since = 6;             // NIP-01
    sfixed64 until = 7;             // NIP-01
    int64 limit = 8;                // NIP-01
}

message Request {
    string subscription_id = 1;     // NIP-01
    repeated Filter filters = 2;    // NIP-01
}

/************************************************
 * CLOSE message-type
 * NIP-01
 */
message Close {
    string subscription_id = 1;     // NIP-01
}

/************************************************
 * client-to-relay packet
 * NIP-01
 */
message clientToRelay {
    repeated Event EVENT = 1;       // NIP-01
    repeated Request REQ = 2;       // NIP-01
    repeated Close CLOSE = 3;       // NIP-01
}
